--- a/style.css
+++ b/style.css
@@ -14,3 +14,12 @@
     background-position: center;
     background-size: cover;
 }
+
+i {
+    color: white;
+}
+
+.form-box{
+    width: 90%;
+    max-width: 450px;
+}
