--- a/style.css
+++ b/style.css
@@ -18,9 +18,6 @@
     align-items: center;
 }
 
-i {
-    color: white;
-}
 
 .form-box{
     width: 90%;
@@ -48,4 +45,21 @@ i {
 
 .input-field {
     background: #eaeaea;
+    margin: 15px 10px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
 }
+
+.input-field input{
+    width: 100%;
+    border: 0;
+    outline: 0;
+    padding: 18px 15px;
+    background: transparent;
+}
+.input-field i{
+   margin-left: 15px;
+   color: #999;
+}
+
