--- a/style.css
+++ b/style.css
@@ -45,10 +45,14 @@
 
 .input-field {
     background: #eaeaea;
-    margin: 15px 10px;
+    margin: 15px 0;
     border-radius: 10px;
     display: flex;
     align-items: center;
+
+    max-height: 60px;
+    transition: max-height 0.5s;
+    overflow: hidden;
 }
 
 .input-field input{
@@ -89,7 +93,7 @@ form p a {
     cursor: pointer;
     border: 0;
     outline: 0;
-    transition: background 1s;
+    /* transition: background 1s; */
 }
 
 .input-group {
